--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main>
+        <h1>Player HP: <span id="player-hp">30</span></h1>
+        <h1>Enemy HP: <span id="enemy-hp">30</span></h1>
+        <button id="play-button">Play game round</button>
+    </main>
     
     <script src="main.js"></script>
 </body>
