--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <main>
-        <h1>Player HP: <span id="player-hp">30</span></h1>
-        <h1>Enemy HP: <span id="enemy-hp">30</span></h1>
+        <h1>Brawl</h1>
+        <h2>Player HP: <span id="player-hp">50</span></h1>
+        <h2>Enemy HP: <span id="enemy-hp">50</span></h1>
         <button id="play-button">Play game round</button>
+        <ul id="combat-log"></ul>
     </main>
     
     <script src="main.js"></script>
