added loop and healing

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <main>
         <h1>Brawl</h1>
-        <h2>Player HP: <span id="player-hp">50</span></h1>
-        <h2>Enemy HP: <span id="enemy-hp">50</span></h1>
-        <button id="play-button">Play game round</button>
+        <h2>Player HP: <span id="player-hp">100</span></h1>
+        <h2>Enemy HP: <span id="enemy-hp">60</span></h1>
+        <button id="play-button">Play</button>
+        <button id="stop-button">Stop</button>
         <ul id="combat-log"></ul>
     </main>
     
